add applying video settings via console

--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -13,6 +13,8 @@ set(PROJECT_SRC
   ${PROJECT_DIR}/core/StateStack.cpp
   ${PROJECT_DIR}/core/SysTime.cpp
 
+  ${PROJECT_DIR}/detail/Operators.cpp
+
   ${PROJECT_DIR}/ecs/Component.cpp
   ${PROJECT_DIR}/ecs/Director.cpp
   ${PROJECT_DIR}/ecs/Entity.cpp
