--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -164,6 +164,8 @@
     <ClCompile Include="src\graphics\postprocess\PostOldSchool.cpp" />
     <ClCompile Include="src\graphics\postprocess\PostProcess.cpp" />
     <ClCompile Include="src\graphics\SpriteSheet.cpp" />
+    <ClCompile Include="src\imgui\Gui.cpp" />
+    <ClCompile Include="src\imgui\GuiClient.cpp" />
     <ClCompile Include="src\imgui\imgui.cpp" />
     <ClCompile Include="src\imgui\imgui_demo.cpp" />
     <ClCompile Include="src\imgui\imgui_draw.cpp" />
@@ -227,6 +229,8 @@
     <ClInclude Include="include\xyginext\graphics\postprocess\OldSchool.hpp" />
     <ClInclude Include="include\xyginext\graphics\postprocess\PostProcess.hpp" />
     <ClInclude Include="include\xyginext\graphics\SpriteSheet.hpp" />
+    <ClInclude Include="include\xyginext\gui\Gui.hpp" />
+    <ClInclude Include="include\xyginext\gui\GuiClient.hpp" />
     <ClInclude Include="include\xyginext\network\NetClient.hpp" />
     <ClInclude Include="include\xyginext\network\NetData.hpp" />
     <ClInclude Include="include\xyginext\network\NetHost.hpp" />
