--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 #add source files used by your project here
 set(PROJECT_SRC
+  ${PROJECT_DIR}/AnimationController.cpp
   ${PROJECT_DIR}/ClientServerShared.cpp
   ${PROJECT_DIR}/CollisionSystem.cpp
   ${PROJECT_DIR}/ErrorState.cpp
