--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="src\core\State.cpp" />
     <ClCompile Include="src\core\StateStack.cpp" />
     <ClCompile Include="src\core\SysTime.cpp" />
+    <ClCompile Include="src\detail\glad.c" />
     <ClCompile Include="src\detail\Operators.cpp" />
     <ClCompile Include="src\ecs\Component.cpp" />
     <ClCompile Include="src\ecs\components\AudioEmitter.cpp" />
@@ -155,6 +156,7 @@
     <ClCompile Include="src\ecs\systems\CameraSystem.cpp" />
     <ClCompile Include="src\ecs\systems\CommandSystem.cpp" />
     <ClCompile Include="src\ecs\systems\InterpolationSystem.cpp" />
+    <ClCompile Include="src\ecs\systems\ParticleSystem.cpp" />
     <ClCompile Include="src\ecs\systems\QuadTree.cpp" />
     <ClCompile Include="src\ecs\systems\QuadTreeNode.cpp" />
     <ClCompile Include="src\ecs\systems\SpriteAnimator.cpp" />
@@ -224,6 +226,7 @@
     <ClInclude Include="include\xyginext\ecs\systems\CameraSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\CommandSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\InterpolationSystem.hpp" />
+    <ClInclude Include="include\xyginext\ecs\systems\ParticleSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\QuadTree.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\SpriteAnimator.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\SpriteRenderer.hpp" />
