add spawning / despawning bubbles

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -123,6 +123,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\AnimationController.cpp" />
+    <ClCompile Include="src\BubbleSystem.cpp" />
     <ClCompile Include="src\ClientServerShared.cpp" />
     <ClCompile Include="src\CollisionSystem.cpp" />
     <ClCompile Include="src\ErrorState.cpp" />
@@ -139,6 +140,7 @@
   <ItemGroup>
     <ClInclude Include="src\ActorSystem.hpp" />
     <ClInclude Include="src\AnimationController.hpp" />
+    <ClInclude Include="src\BubbleSystem.hpp" />
     <ClInclude Include="src\ClientServerShared.hpp" />
     <ClInclude Include="src\CollisionSystem.hpp" />
     <ClInclude Include="src\CommandIDs.hpp" />
