update bubble sprite improve caching of loaded sprite sheets

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="src\Server.hpp" />
     <ClInclude Include="src\ServerMessages.hpp" />
     <ClInclude Include="src\SharedStateData.hpp" />
+    <ClInclude Include="src\SpriteIDs.hpp" />
     <ClInclude Include="src\StateIDs.hpp" />
     <ClInclude Include="src\TextboxDirector.hpp" />
   </ItemGroup>
