--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(PROJECT_SRC
   ${PROJECT_DIR}/GameState.cpp
   ${PROJECT_DIR}/main.cpp
   ${PROJECT_DIR}/MenuState.cpp
+  ${PROJECT_DIR}/NPCSystem.cpp
   ${PROJECT_DIR}/PlayerInput.cpp
   ${PROJECT_DIR}/PlayerSystem.cpp
   ${PROJECT_DIR}/Server.cpp
