add particle director class

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MenuState.cpp" />
     <ClCompile Include="src\NPCSystem.cpp" />
+    <ClCompile Include="src\ParticleDirector.cpp" />
     <ClCompile Include="src\PlayerInput.cpp" />
     <ClCompile Include="src\PlayerSystem.cpp" />
     <ClCompile Include="src\Server.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="src\MessageIDs.hpp" />
     <ClInclude Include="src\NPCSystem.hpp" />
     <ClInclude Include="src\PacketIDs.hpp" />
+    <ClInclude Include="src\ParticleDirector.hpp" />
     <ClInclude Include="src\PlayerInput.hpp" />
     <ClInclude Include="src\PlayerSystem.hpp" />
     <ClInclude Include="src\Server.hpp" />
