--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(PROJECT_SRC
   ${PROJECT_DIR}/ClientServerShared.cpp
   ${PROJECT_DIR}/CollisionSystem.cpp
   ${PROJECT_DIR}/ErrorState.cpp
+  ${PROJECT_DIR}/FruitSystem.cpp
   ${PROJECT_DIR}/Game.cpp
   ${PROJECT_DIR}/GameState.cpp
   ${PROJECT_DIR}/main.cpp
