add server side scoreing for popping bubbles and collecting fruit add client receiving player score updates

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="src\FruitSystem.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameState.cpp" />
+    <ClCompile Include="src\InventoryDirector.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MenuState.cpp" />
     <ClCompile Include="src\NPCSystem.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="src\Game.hpp" />
     <ClInclude Include="src\GameState.hpp" />
     <ClInclude Include="src\Hitbox.hpp" />
+    <ClInclude Include="src\InventoryDirector.hpp" />
     <ClInclude Include="src\MapData.hpp" />
     <ClInclude Include="src\MenuState.hpp" />
     <ClInclude Include="src\MessageIDs.hpp" />
