--- a/cmake template/src/CMakeLists.txt
+++ b/cmake template/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-#add source files used by your project here
-set(PROJECT_SRC
-  ${PROJECT_DIR}/Game.cpp
-  ${PROJECT_DIR}/main.cpp)
+set(PROJECT_SRC 
+  ${PROJECT_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp 
+  PARENT_SCOPE)
