add sprites for UI add drawing UI and updating it from server messages rename _DEBUG_ macro to XY_DEBUG

--- a/xyginext/CMakeLists.txt
+++ b/xyginext/CMakeLists.txt
@@ -17,7 +17,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
   endif()
 endif()
 
-SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_")
+SET (CMAKE_CXX_FLAGS_DEBUG "-g -DXY_DEBUG")
 SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
 SET (CMAKE_DEBUG_POSTFIX -d)
 
