--- a/Demo/CMakeLists.txt
+++ b/Demo/CMakeLists.txt
@@ -19,7 +19,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
   endif()
 endif()
 
-SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_")
+SET (CMAKE_CXX_FLAGS_DEBUG "-g -DXY_DEBUG")
 SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
 
 if(PROJECT_STATIC_SFML)
