--- a/cmake template/CMakeLists.txt
+++ b/cmake template/CMakeLists.txt
@@ -23,11 +23,20 @@ find_package(SFML ${SFML_MIN_VERSION} REQUIRED graphics window audio system netw
 # Find xyginext
 find_package(XYGINEXT REQUIRED)
 
+# X11 is required on unices
+if(UNIX)
+  find_package(X11 REQUIRED)
+endif()
+
 # Additional include directories
 include_directories(
   ${XYXT_INCLUDE_DIR}
   ${SFML_INCLUDE_DIR} 
   ${CMAKE_SOURCE_DIR}/include)
+
+if(X11_FOUND)
+  include_directories(${X11_INCLUDE_DIRS})
+endif()
 
 # Project source files
 add_subdirectory(include)
@@ -41,6 +50,11 @@ target_link_libraries(${PROJECT_NAME}
   ${SFML_LIBRARIES}
   ${SFML_DEPENDENCIES}
   ${XYXT_LIBRARIES})
+
+if(X11_FOUND)
+  target_link_libraries(${PROJECT_NAME}
+    ${X11_LIBRARIES})
+endif()
 
 # Install executable
 install(TARGETS ${PROJECT_NAME}
