--- a/xyginext/CMakeLists.txt
+++ b/xyginext/CMakeLists.txt
@@ -13,7 +13,14 @@ SET(BUILD_SHARED_LIBS true CACHE BOOL "Build Shared libs")
 # We're using c++14
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -Wextra")
+
+# enable some warnings in debug builds with gcc/clang
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wreorder")
+else if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wreorder -Wheader-guard")
+endif()
+
 
 # Only works with SFML version 2.4 and above
 SET(SFML_MIN_VERSION 2.4)
